tooling/nargo_cli/tests/snapshots/execution_success/nested_array_with_refs_from_param/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[nested_array_with_refs_from_param] Circuit output: 1
